export const snapshot = {};

snapshot[`Sitemap plugin 1`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.json",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".njk",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
  ],
  src: [
    "/",
    "/_data.yml",
    "/favicon.png",
    "/page5.yaml",
    "/pages",
    "/pages/2020-06-21_page2.page.json",
    "/pages/2021-01-02-18-32_page4.page.ts",
    "/pages/2021-12-29-page6.md",
    "/pages/_data",
    "/pages/_data.yml",
    "/pages/_data/colors.yml",
    "/pages/_data/documents.ts",
    "/pages/_data/drinks.js",
    "/pages/_data/names.json",
    "/pages/page1.md",
    "/pages/page3.page.js",
    "/pages/subpage",
    "/pages/subpage/_data.yml",
    "/pages/subpage/page7.page.js",
    "/static.yml",
    "/styles.css",
  ],
}
`;

snapshot[`Sitemap plugin 2`] = `[]`;

snapshot[`Sitemap plugin 3`] = `
[
  {
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    data: {
      content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
      page: [
        "src",
        "data",
      ],
      url: "/robots.txt",
    },
    src: {
      asset: true,
      ext: undefined,
      path: "",
      remote: undefined,
      slug: "robots",
    },
  },
  {
    content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2020-06-21T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page4/</loc>
    <lastmod>2021-01-02T18:32:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/subpage/page7/</loc>
    <lastmod>2022-01-02T00:00:00.000Z</lastmod>
  </url>
</urlset>',
    data: {
      content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2020-06-21T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page4/</loc>
    <lastmod>2021-01-02T18:32:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/subpage/page7/</loc>
    <lastmod>2022-01-02T00:00:00.000Z</lastmod>
  </url>
</urlset>',
      page: [
        "src",
        "data",
      ],
      url: "/sitemap.xml",
    },
    src: {
      asset: true,
      ext: undefined,
      path: "",
      remote: undefined,
      slug: "sitemap",
    },
  },
  {
    content: "<!DOCTYPE html>
Content of Page 5",
    data: {
      children: "Content of Page 5",
      content: "Content of Page 5",
      date: [],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Default site name",
      tags: "Array(0)",
      title: "Page 5",
      url: "/page5/",
    },
    src: {
      asset: false,
      ext: ".yaml",
      path: "/page5",
      remote: undefined,
      slug: "page5",
    },
  },
  {
    content: "<!DOCTYPE html>
Content of Page 2",
    data: {
      children: "Content of Page 2",
      colors: "Array(3)",
      content: "Content of Page 2",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(1)",
      title: "Page 2",
      url: "/overrided-page2/",
    },
    src: {
      asset: false,
      ext: ".page.json",
      path: "/pages/2020-06-21_page2",
      remote: undefined,
      slug: "page2",
    },
  },
  {
    content: "<!DOCTYPE html>
Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.page.ts",
    data: {
      children: "Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.page.ts",
      colors: "Array(3)",
      content: "default",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Overrided site name",
      tags: "Array(1)",
      title: "Page 4",
      url: "/pages/page4/",
    },
    src: {
      asset: false,
      ext: ".page.ts",
      path: "/pages/2021-01-02-18-32_page4",
      remote: undefined,
      slug: "page4",
    },
  },
  {
    content: "<!DOCTYPE html>
<p>Content of Page 6</p>
",
    data: {
      children: "<p>Content of Page 6</p>
",
      colors: "Array(3)",
      content: "Content of Page 6
",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(2)",
      title: "Page 6",
      url: "/pages/page6/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/pages/2021-12-29-page6",
      remote: undefined,
      slug: "page6",
    },
  },
  {
    content: "Content of Page 3",
    data: {
      colors: "Array(3)",
      content: "Content of Page 3",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(1)",
      title: "Page 3",
      url: "/page_3",
    },
    src: {
      asset: false,
      ext: ".page.js",
      path: "/pages/page3",
      remote: undefined,
      slug: "page3",
    },
  },
  {
    content: "<!DOCTYPE html>
Content of Page 7",
    data: {
      children: "Content of Page 7",
      colors: "Array(3)",
      content: "Content of Page 7",
      date: [],
      documents: "Array(3)",
      drinks: [
        "alcoholic",
        "others",
      ],
      imagick: "Array(1)",
      mergedKeys: [
        "tags",
        "metas",
        "imagick",
      ],
      metas: [
        "title",
        "description",
      ],
      names: "Array(2)",
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      site: "Folder overrided site name",
      tags: "Array(3)",
      url: "/pages/subpage/page7/",
    },
    src: {
      asset: false,
      ext: ".page.js",
      path: "/pages/subpage/page7",
      remote: undefined,
      slug: "page7",
    },
  },
]
`;

snapshot[`Sitemap plugin with a multilanguage plugin 1`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      engines: 0,
      ext: ".page.json",
      loader: [AsyncFunction: json],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".njk",
      loader: [AsyncFunction: text],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
      pageType: "page",
    },
  ],
  src: [
    "/",
    "/_includes",
    "/_includes/layout.njk",
    "/index.md",
    "/other.njk",
    "/pages",
    "/pages/page1.md",
    "/pages/page1_en.md",
    "/pages/page1_gl.md",
    "/pagination.page.js",
  ],
}
`;

snapshot[`Sitemap plugin with a multilanguage plugin 2`] = `[]`;

snapshot[`Sitemap plugin with a multilanguage plugin 3`] = `
[
  {
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    data: {
      content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
      page: [
        "src",
        "data",
      ],
      url: "/robots.txt",
    },
    src: {
      asset: true,
      ext: undefined,
      path: "",
      remote: undefined,
      slug: "robots",
    },
  },
  {
    content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/en/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/"/>
  </url>
  <url>
    <loc>https://example.com/en/other-page-english/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
  </url>
  <url>
    <loc>https://example.com/en/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/"/>
  </url>
  <url>
    <loc>https://example.com/en/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/fr/other-page-french.html</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
  </url>
  <url>
    <loc>https://example.com/gl/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/"/>
  </url>
  <url>
    <loc>https://example.com/gl/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/gl/paxina-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/"/>
  </url>
  <url>
    <loc>https://example.com/it/pagina-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/"/>
  </url>
</urlset>',
    data: {
      content: '<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/en/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/"/>
  </url>
  <url>
    <loc>https://example.com/en/other-page-english/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
  </url>
  <url>
    <loc>https://example.com/en/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/"/>
  </url>
  <url>
    <loc>https://example.com/en/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/fr/other-page-french.html</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/"/>
    <xhtml:link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html"/>
  </url>
  <url>
    <loc>https://example.com/gl/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/"/>
  </url>
  <url>
    <loc>https://example.com/gl/page-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/page-1/"/>
  </url>
  <url>
    <loc>https://example.com/gl/paxina-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/"/>
  </url>
  <url>
    <loc>https://example.com/it/pagina-1/</loc>
    <xhtml:link rel="alternate" hreflang="en" href="https://example.com/en/page-1/"/>
    <xhtml:link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/"/>
    <xhtml:link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/"/>
  </url>
</urlset>',
      page: [
        "src",
        "data",
      ],
      url: "/sitemap.xml",
    },
    src: {
      asset: true,
      ext: undefined,
      path: "",
      remote: undefined,
      slug: "sitemap",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/">
</head><body><p>Hello world</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      children: "<p>Hello world</p>
",
      content: "Hello world
",
      date: [],
      id: "index",
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Hello world",
      url: "/en/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/index",
      remote: undefined,
      slug: "index",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/">
</head><body><p>Ola mundo</p>
</body></html>',
    data: {
      alternates: "Array(2)",
      children: "<p>Ola mundo</p>
",
      content: "Ola mundo",
      date: [],
      id: "index",
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Ola mundo",
      url: "/gl/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/index",
      remote: undefined,
      slug: "index",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/">
<link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html">
</head><body><p>Other page <a href="/gl/">Link to index in Galego</a></p></body></html>',
    data: {
      alternates: "Array(2)",
      children: '<p>Other page <a href="/gl/">Link to index in Galego</a></p>',
      content: \`<p>Other page <a href="{{ '~/index.md(lang=gl)' | url }}">Link to index in Galego</a></p>\`,
      date: [],
      id: "other",
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Other",
      url: "/en/other-page-english/",
    },
    src: {
      asset: false,
      ext: ".njk",
      path: "/other",
      remote: undefined,
      slug: "other",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="fr"><head><link rel="alternate" hreflang="en" href="https://example.com/en/other-page-english/">
<link rel="alternate" hreflang="fr" href="https://example.com/fr/other-page-french.html">
</head><body><p>Other page <a href="/gl/">Link to index in Galego</a></p></body></html>',
    data: {
      alternates: "Array(2)",
      children: '<p>Other page <a href="/gl/">Link to index in Galego</a></p>',
      content: \`<p>Other page <a href="{{ '~/index.md(lang=gl)' | url }}">Link to index in Galego</a></p>\`,
      date: [],
      id: "other",
      lang: "fr",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Autre",
      url: "/fr/other-page-french.html",
    },
    src: {
      asset: false,
      ext: ".njk",
      path: "/other",
      remote: undefined,
      slug: "other",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="it"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/">
</head><body><p>Pagina 1</p>
</body></html>',
    data: {
      alternates: "Array(3)",
      children: "<p>Pagina 1</p>
",
      content: "Pagina 1
",
      date: [],
      id: "page1",
      lang: "it",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "page-it",
      url: "/it/pagina-1/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/pages/page1",
      remote: undefined,
      slug: "page1",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/">
</head><body><p>Page 1</p>
</body></html>',
    data: {
      alternates: "Array(3)",
      children: "<p>Page 1</p>
",
      content: "Page 1
",
      date: [],
      id: "page1",
      lang: "en",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "page-en",
      url: "/en/page-1/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/pages/page1_en",
      remote: undefined,
      slug: "page1_en",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="it" href="https://example.com/it/pagina-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/paxina-1/">
</head><body><p>Páxina 1</p>
</body></html>',
    data: {
      alternates: "Array(3)",
      children: "<p>Páxina 1</p>
",
      content: "Páxina 1
",
      date: [],
      id: "page1",
      lang: "gl",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "page-gl",
      url: "/gl/paxina-1/",
    },
    src: {
      asset: false,
      ext: ".md",
      path: "/pages/page1_gl",
      remote: undefined,
      slug: "page1_gl",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/page-1/">
</head><body><nav>

  <a href="/en/page-1/" hreflang="en" class="alternate"></a>

  <a href="/gl/page-1/" hreflang="gl" class="alternate"></a>

</nav>

  <li>Ola mundo</li>

  <li>page-gl</li>

</body></html>',
    data: {
      alternates: "Array(2)",
      children: null,
      content: null,
      date: [],
      id: "page-1",
      lang: "gl",
      layout: "layout.njk",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      pagination: [
        "page",
        "totalPages",
        "totalResults",
        "previous",
        "next",
      ],
      results: "Array(2)",
      search: [],
      tags: "Array(0)",
      url: "/gl/page-1/",
    },
    src: {
      asset: false,
      ext: ".page.js",
      path: "/pagination[0]",
      remote: undefined,
      slug: "pagination",
    },
  },
  {
    content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="en" href="https://example.com/en/page-1/">
<link rel="alternate" hreflang="gl" href="https://example.com/gl/page-1/">
</head><body><nav>

  <a href="/en/page-1/" hreflang="en" class="alternate"></a>

  <a href="/gl/page-1/" hreflang="gl" class="alternate"></a>

</nav>

  <li>Hello world</li>

  <li>Other</li>

  <li>page-en</li>

</body></html>',
    data: {
      alternates: "Array(2)",
      children: null,
      content: null,
      date: [],
      id: "page-1",
      lang: "en",
      layout: "layout.njk",
      mergedKeys: [
        "tags",
        "en",
        "fr",
        "it",
        "gl",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      pagination: [
        "page",
        "totalPages",
        "totalResults",
        "previous",
        "next",
      ],
      results: "Array(3)",
      search: [],
      tags: "Array(0)",
      url: "/en/page-1/",
    },
    src: {
      asset: false,
      ext: ".page.js",
      path: "/pagination[1]",
      remote: undefined,
      slug: "pagination",
    },
  },
]
`;
